# Post

./: .gitignore  Dockerfile.jetson  README.md  benchmark_models.py  benchmark_refdrone.py  compose.jetson.yaml  file.py  pyproject.toml  stuff.py
scripts/: download_drone_sample.sh  download_refdrone_annotations.sh  run_model_matrix.sh  trim_video.py
src/open_vocab_track/: __init__.py  benchmark.py  cli.py  pipeline.py  tracking.py  types.py
src/open_vocab_track/detectors/: __init__.py  base.py  factory.py  florence2.py  locate_anything.py  moondream.py
tests/: test_benchmark.py  test_detectors.py  test_pipeline.py  test_tracking.py  test_types.py
